--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
     Coded by <a href="#">Anson Yuen</a>.
   </div>
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-  <script src="index.js" charset="utf-8"></script>
+  <script src="index.js"></script>
 </body>
 
 </html>
